# ode-rl-environments

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  references.md
control_environments_rl/: __init__.py
control_environments_rl/examples/: chemical_reactor_example.py  controlled_tank_example.py  minimal_ode_example.py  simple_ode_example.py
control_environments_rl/src/core/: ode_environment.py  ode_models.py  ode_rl_loop.py
control_environments_rl/src/ode_models/: __init__.py  chemical_reactor.py  controlled_tank.py
control_environments_rl/src/utils/: visualization.py
ode_rl_environments/: __init__.py
ode_rl_environments/examples/: chemical_reactor_example.py  controlled_tank_example.py  minimal_ode_example.py
ode_rl_environments/src/core/: ode_environment.py
ode_rl_environments/src/ode_models/: __init__.py  simple_ode.py
